--- a/backend/src/etc/service.properties
+++ b/backend/src/etc/service.properties
@@ -14,8 +14,8 @@ consul.check.timeout=5s
 consul.check.interval=5s
 consul.tags=nab,nab-example
 consul.enabled=false
-
-master.jdbcUrl=jdbc:postgresql://postgres:5432/hh
+#//TODO dернуть как было
+master.jdbcUrl=jdbc:postgresql://localhost:5432/hh
 master.user=hh
 master.password=hh
 
@@ -23,3 +23,5 @@ master.pool.maxLifetime=100000
 master.pool.idleTimeout=0
 master.pool.connectionTimeout=1000
 master.pool.leakDetectionThreshold=3000
+
+hh.api.employers=https://api.hh.ru/employers
