--- a/backend/src/etc/service.properties
+++ b/backend/src/etc/service.properties
@@ -25,3 +25,4 @@ master.pool.connectionTimeout=1000
 master.pool.leakDetectionThreshold=3000
 
 hh.api.employers=https://api.hh.ru/employers
+hh.api.vacancies=https://api.hh.ru/vacancies
