--- a/backend/src/etc/service.properties
+++ b/backend/src/etc/service.properties
@@ -26,3 +26,4 @@ master.pool.leakDetectionThreshold=3000
 
 hh.api.employers=https://api.hh.ru/employers
 hh.api.vacancies=https://api.hh.ru/vacancies
+hh.api.views.limit=2
