--- a/backend/src/etc/service.properties
+++ b/backend/src/etc/service.properties
@@ -14,8 +14,7 @@ consul.check.timeout=5s
 consul.check.interval=5s
 consul.tags=nab,nab-example
 consul.enabled=false
-#//TODO dернуть как было
-master.jdbcUrl=jdbc:postgresql://localhost:5432/hh
+master.jdbcUrl=jdbc:postgresql://postgres:5432/hh
 master.user=hh
 master.password=hh
 
